src/objects/Insight_Data_Storage__c.object
<CustomObject>
    <fields>
        <fullName>Avg_Course_Grade__c</fullName>
        <label>Avg Course Grade</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Duration_Minutes__c</fullName>
        <label>Avg Duration (Minutes)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Page_Views__c</fullName>
        <label>Avg Page Views</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Code__c</fullName>
        <label>Customer Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Members_Activated__c</fullName>
        <label>Members Activated</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Members_Deactivated__c</fullName>
        <label>Members Deactivated</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Members_Invited__c</fullName>
        <label>Members Invited</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_End__c</fullName>
        <label>Month End</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Courses__c</fullName>
        <label>Number Courses</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OE_Code__c</fullName>
        <externalId>true</externalId>
        <label>OE Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Page_Views__c</fullName>
        <label>Total Page Views</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Insight Data Storage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IDS-{000000}</displayFormat>
        <label>Insight Data Storage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insight Data Storage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>